src/tests/cases/snapshots/excise__tests__cases__ui__small_files.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/small_files  ◆ COMPLETE                                                                                                                                            
 allocated #.#M   reclaim #.#M   apparent 2.3M   5 entries                                                                                                                                    
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────┤│Select an entry for identity,     │
││                                                                                                                             │                         ││bounds, state, and actions.       │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                            file2                                                            │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                         1.0M (41%)                                                          │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │          file1          ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
│├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤      392.0K (17%)       ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                            file3                                                            │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                         1.0M (41%)                                                          │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             │                         ││                                  │
││                                                                                                                             ├────────────────────────┬┤│                                  │
││                                                                                                                             ├────────────────────────┘││                                  │
└┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Small entries are a viewport summary · use / filter or zoom
