src/tests/cases/snapshots/excise__tests__cases__ui__small_files_with_x_as_zero-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/ex[...]_as_zero  ◆ COMPLETE         
 Used #.#M · Reclaim #.#M                         
67 more entri[..]rows to scroll · store ##.#K/#.#G
▟ LIST ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏▌  file1                      1.0M   41.9%      ▕
▏   file2                      1.0M   41.9%      ▕
▏   small_file1                4.0K    0.2%      ▕
▏   small_file10               4.0K    0.2%      ▕
▏   small_file11               4.0K    0.2%      ▕
▏   small_file12               4.0K    0.2%      ▕
▏   small_file13               4.0K    0.2%      ▕
▏   small_file14               4.0K    0.2%      ▕
▏   small_file15               4.0K    0.2%      ▕
▏   small_file16               4.0K    0.2%      ▕
▏   small_file17               4.0K    0.2%      ▕
▏   small_file18               4.0K    0.2%      ▕
▏   small_file19               4.0K    0.2%      ▕
▏   small_file2                4.0K    0.2%      ▕
▏   small_file20               4.0K    0.2%      ▕
▏   small_file21               4.0K    0.2%      ▕
▏   small_file22               4.0K    0.2%      ▕
▏ ▟ QUIT ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜ ▕
▏ ▏                Quit Excise?                ▕ ▕
▏ ▏                                            ▕ ▕
▏ ▏                  [y] Quit                  ▕ ▕
▏ ▏           [Esc/q/n] Keep working           ▕ ▕
▏ ▏                                            ▕ ▕
▏ ▏                                            ▕ ▕
▏ ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔ ▕
▏   small_file30               4.0K    0.2%      ▕
▏   small_file31               4.0K    0.2%      ▕
▏   small_file32               4.0K    0.2%      ▕
▏   small_file33               4.0K    0.2%      ▕
▏   small_file34               4.0K    0.2%      ▕
▏   small_file35               4.0K    0.2%      ▕
▏   small_file36               4.0K    0.2%      ▕
▏   small_file37               4.0K    0.2%      ▕
▏   small_file38               4.0K    0.2%      ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                  
▟ SELECTED ITEM ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏file1                                           ▕
▏◆ COMPLETE · file                               ▕
▏Actions unavailable                             ▕
▏Can reclaim #.#M                                ▕
▏Space used #.#M                                 ▕
▏Content size 1.0M · 0 items                     ▕
▏Scan result: included                           ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  ? help
