src/tests/cases/snapshots/excise__tests__cases__ui__small_files_with_x_as_zero.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/ex[...]_as_zero  ◆ COMPLETE         
 Used #.#M · Reclaim #.#M                         
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
▟▐ LIST ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏▌  file1                      1.0M   41.9%      ▕
▏   file2                      1.0M   41.9%      ▕
▏   small_file1                4.0K    0.2%      ▕
▏   small_file10               4.0K    0.2%      ▕
▏   small_file11               4.0K    0.2%      ▕
▏   small_file12               4.0K    0.2%      ▕
▏   small_file13               4.0K    0.2%      ▕
▏   small_file14               4.0K    0.2%      ▕
▏   small_file15               4.0K    0.2%      ▕
▏   small_file16               4.0K    0.2%      ▕
▏   small_file17               4.0K    0.2%      ▕
▏   small_file18               4.0K    0.2%      ▕
▏   small_file19               4.0K    0.2%      ▕
▏   small_file2                4.0K    0.2%      ▕
▏   small_file20               4.0K    0.2%      ▕
▏   small_file21               4.0K    0.2%      ▕
▏   small_file22               4.0K    0.2%      ▕
▏   small_file23               4.0K    0.2%      ▕
▏   small_file24               4.0K    0.2%      ▕
▏   small_file25               4.0K    0.2%      ▕
▏   small_file26               4.0K    0.2%      ▕
▏   small_file27               4.0K    0.2%      ▕
▏   small_file28               4.0K    0.2%      ▕
▏   small_file29               4.0K    0.2%      ▕
▏   small_file3                4.0K    0.2%      ▕
▏   small_file30               4.0K    0.2%      ▕
▏   small_file31               4.0K    0.2%      ▕
▏   small_file32               4.0K    0.2%      ▕
▏   small_file33               4.0K    0.2%      ▕
▏   small_file34               4.0K    0.2%      ▕
▏   small_file35               4.0K    0.2%      ▕
▏   small_file36               4.0K    0.2%      ▕
▏   small_file37               4.0K    0.2%      ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                  
▟▐ SELECTED ITEM ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏file1                                           ▕
▏◆ COMPLETE · file                               ▕
▏Backspace delete                                ▕
▏Can reclaim #.#M                                ▕
▏Space used #.#M                                 ▕
▏Content size 1.0M · 0 items                     ▕
▏Scan result: included                           ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  ? help      
68 more entries below · use arrows to scroll
